--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -109,7 +109,7 @@
             <div class='col s10 offset-s1'>
                 <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>Installation</h1>
                 <h5>
-                    <div class='my-code'>install.packages(shinymaterial)</div>
+                    <div class='my-code'>install.packages("shinymaterial")</div>
                 </h5>
                 <br>
 
