--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -52,7 +52,6 @@
             height: 3px;
             background-color: #009688;
         }
-
     </style>
 </head>
 
@@ -671,16 +670,26 @@ shinyApp(ui = ui, server = server)</code></pre>
             <div class="col s5 offset-s1">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title teal-text">Example App</span>
-                        <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank"><img src="img/example_app.png" width="100%"></a>
+                        <span class="card-title teal-text">Dashboard</span>
+                        <a href="https://ericrayanderson.shinyapps.io/shinymaterial_dashboard" target="_blank"><img src="img/shinymaterial_dashboard.png" width="100%"></a>
                     </div>
                 </div>
             </div>
-            <div class="col s5">
+            <!-- <div class="col s5">
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title teal-text">Gmail Clone</span>
                         <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=gmail_clone" target="_blank"><img src="img/gmail_clone.png" width="100%"></a>
+                    </div>
+                </div>
+        </div>
+    </div>
+    <div class="row"> -->
+            <div class="col s5">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title teal-text">Basic App</span>
+                        <a href="https://ericrayanderson.shinyapps.io/shiny_material_showcase/?app=example_app" target="_blank"><img src="img/example_app2.png" width="100%"></a>
                     </div>
                 </div>
             </div>
@@ -840,7 +849,6 @@ shinyApp(ui = ui, server = server)</code></pre>
             hljs.initHighlightingOnLoad();
             $('.datepicker').pickadate({});
         });
-
     </script>
 </body>
 
