--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -827,7 +827,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         None
                     </li>
                     <li class="collection-item">
-                        <h5>Function Updates</h5>None
+                        <h5>Function Updates</h5>Bug fixes
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
