--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -52,6 +52,7 @@
             height: 3px;
             background-color: #009688;
         }
+
     </style>
 </head>
 
@@ -824,7 +825,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <h5>Date</h5>Ongoing</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
-                        None
+                        <div class='my-code'>
+                            material_file_input()
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>Bug fixes
@@ -849,6 +852,7 @@ shinyApp(ui = ui, server = server)</code></pre>
             hljs.initHighlightingOnLoad();
             $('.datepicker').pickadate({});
         });
+
     </script>
 </body>
 
