--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -118,7 +118,7 @@
 
                     <a href="#basic" class="collection-item">Basic</a>
 
-                    <a href="#basic_side_nav_with_tabs" class="collection-item">Basic + Side-Nav with Tabs</a>
+                    <a href="#basic_side_nav_with_tabs" class="collection-item">Basic + Side-Nav with Tabs (Dashboard)</a>
 
                     <a href="#basic_side_nav_tabs" class="collection-item">Basic + Side-Nav + Tabs</a>
 
