--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -155,7 +155,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
 
                 <div id="basic_side_nav_with_tabs">
-                    <h2><span class='myh2'>Basic </span>+ Side-Nav with Tabs</h2>
+                    <h2><span class='myh2'>Basic </span>+ Side-Nav with Tabs (Dashboard)</h2>
                     <pre><code class='r'>library(shiny)
 library(shinymaterial)
 
