--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -830,7 +830,11 @@ shinyApp(ui = ui, server = server)</code></pre>
                         </div>
                     </li>
                     <li class="collection-item">
-                        <h5>Function Updates</h5>Bug fixes
+                        <h5>Function Updates</h5>
+                        <div class='my-code'>material_page()</div>
+                        <div class='my-code-black'>
+                            include_fonts
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
