--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -386,17 +386,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                             <label for="example_text_box">Text Box</label>
                         </div>
                         <br/>
-                        <form action="#">
-                            <div class="file-field input-field">
-                                <div class="btn">
-                                    <span>File</span>
-                                    <input type="file">
-                                </div>
-                                <div class="file-path-wrapper">
-                                    <input class="file-path validate" type="text">
-                                </div>
-                            </div>
-                        </form>
+
                     </div>
                     <div class="col s12 m4 offset-m1">
                         <pre><code class='r'>
@@ -417,6 +407,21 @@ shinyApp(ui = ui, server = server)</code></pre>
    selected = "s"
  )
         </code></pre>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m4 offset-m1">
+                        <form action="#">
+                            <div class="file-field input-field">
+                                <div class="btn">
+                                    <span>File</span>
+                                    <input type="file">
+                                </div>
+                                <div class="file-path-wrapper">
+                                    <input class="file-path validate" type="text">
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
                 <div class="row">
