--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -699,7 +699,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 </div>
             </div>
             <div class="row">
-                <div class="col s5 offset-1">
+                <div class="col s5 offset-s1">
                     <div class="card">
                         <div class="card-content">
                             <span class="card-title teal-text">Parallax</span>
