--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -847,11 +847,12 @@ shinyApp(ui = ui, server = server)</code></pre>
                         </div>
                     </li>
                     <li class="collection-item">
-                        <h5>Function Updates</h5>
+                        <!--<h5>Function Updates</h5>
                         <div class='my-code'>material_page()</div>
                         <div class='my-code-black'>
                             include_fonts
-                        </div>
+                        </div>-->
+                        None
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
