--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -843,7 +843,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
-                            material_file_input() <br> material_spinner_hide() <br> material_spinner_show() <br> update_material_dropdown() <br> update_material_number_box() <br> update_material_password_box() <br> update_material_switch() <br> update_material_text_box()
+                            material_file_input() <br> material_spinner_hide() <br> material_spinner_show() <br> update_material_dropdown() <br> update_material_number_box() <br> update_material_password_box() <br> update_material_radio_button() <br> update_material_switch() <br> update_material_text_box()
                         </div>
                     </li>
                     <li class="collection-item">
