--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -118,7 +118,7 @@
                     <a href="#basic_side_nav_with_tabs">Dashboard Template</a>
                 </li>
                 <li>
-                    <a href="#basic_side_nav_tabs">Tabs Template</a>
+                    <a href="#basic_side_nav_tabs">Tabs & Side Nav Template</a>
                 </li>
                 <!--
                 <li>
@@ -218,7 +218,7 @@ shinyApp(ui = ui, server = server)
                 </div>
 
                 <div id="basic_side_nav_tabs">
-                    <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Tabs Template</h2>
+                    <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Tabs & Side Nav Template</h2>
                     <pre><code class='r'>library(shiny)
 library(shinymaterial)
 
