--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -120,16 +120,15 @@
                 <li>
                     <a href="#basic_side_nav_tabs">Tabs & Side Nav Template</a>
                 </li>
-                <!--
+
                 <li>
-                    <a href="#basic_parallax">Basic + Parallax</a>
+                    <a href="#basic_parallax">Parallax Template</a>
                 </li>
--->
             </ul>
         </div>
 
         <div class='row'>
-            <div class='col s10 offset-s2'>
+            <div class='col s9 offset-s2'>
                 <div id="installation">
                     <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Installation</h2>
                     <h6>
@@ -265,9 +264,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <br>
                     <br>
                 </div>
-                <!--
+
                 <div id="basic_parallax">
-                    <h2><span class='myh2'>Basic </span> + Parallax</h2>
+                    <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Parallax</h2>
                     <pre><code class='r'>library(shiny)
 library(shinymaterial)
 
@@ -294,7 +293,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 
                     </div>
                 </div>
-                -->
+
             </div>
         </div>
     </div>
