--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -130,14 +130,19 @@
         <div class='row'>
             <div class='col s9 offset-s2'>
                 <div id="installation">
-                    <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Installation</h2>
-                    <h6>
-                        <div class='my-code' style='font-size:20px'>CRAN:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;install.packages(shinymaterial)</div>
-                    </h6>
 
-                    <h6>
-                        <div class='my-code' style='font-size:20px'>DEVELOPMENT:&nbsp;&nbsp;&nbsp;devtools::install_github("ericrayanderson/shinymaterial")</div>
-                    </h6>
+                    <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Installation</h2>
+                    <div class="card">
+                        <br>
+                        <h6>
+                            <div class='my-code' style='font-size:18px'>&nbsp;CRAN:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;install.packages(shinymaterial)</div>
+                        </h6>
+
+                        <h6>
+                            <div class='my-code' style='font-size:18px'>&nbsp;DEVELOPMENT:&nbsp;&nbsp;&nbsp;devtools::install_github("ericrayanderson/shinymaterial")</div>
+                        </h6>
+                        <br>
+                    </div>
                 </div>
                 <br>
 
